Change ridePermit usage in Repo into dtos